// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventItem /> should render correctly 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL cwEAzx cap-link"
      href="/admin-next/event?id=RXZlbnQ6ZXZlbnQz"
    >
      GrenobleWeb2015
    </a>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL eQUJjL"
    >
      <a
        className="sc-bcXGCL cwEAzx cap-link"
        href="https://capco.dev/consultation/croissance-innovation-disruption/presentation/presentation-1"
      >
        Croissance, innovation, disruption
      </a>
      <div
        className="sc-bcXGCL hxRyWs"
      />
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <p
      className="sc-bcXGCL hQvDkj cap-text"
    >
      10/06/2032
       
      -
       
      16/03/2035
    </p>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL cwEAzx cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    03/01/2015
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL hxFFPc"
    >
      <button
        aria-describedby=":r0:"
        aria-label="global.download"
        className="sc-bcXGCL hluKno cap-buttonQuickAction"
        href="https://capco.dev/export-event-participants/event3?_locale=fr-FR"
        onBlur={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocusCapture={[Function]}
        onKeyDownCapture={[Function]}
        onKeyPressCapture={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseMove={[Function]}
      >
        <svg
          aria-hidden="true"
          className="sc-bcXGCL sc-oZHua WsfA-d hQQZty cap-icon cap-buttonQuickAction-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.546 16.938c-.67 0-1.212.543-1.212 1.212v1.855a1.57 1.57 0 0 1-1.571 1.57H3.995c-.867 0-1.57-.703-1.571-1.57V18.15a1.212 1.212 0 1 0-2.424 0v1.855a4 4 0 0 0 3.995 4h15.768a4 4 0 0 0 4-4V18.15a1.21 1.21 0 0 0-1.217-1.212"
          />
          <path
            d="M11.879 0A1.94 1.94 0 0 0 9.94 1.939v9.066a.25.25 0 0 1-.25.25H7.031a.97.97 0 0 0-.732 1.606l4.848 5.576a.97.97 0 0 0 1.464 0l4.848-5.576a.97.97 0 0 0-.732-1.606h-2.659a.25.25 0 0 1-.25-.25V1.939A1.94 1.94 0 0 0 11.879 0"
          />
        </svg>
      </button>
      <span
        hidden={true}
        id=":r0:"
        style={
          {
            "position": "fixed",
          }
        }
      />
    </div>
  </td>,
]
`;

exports[`<EventItem /> should render correctly with deleted event 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL cwEAzx cap-link"
      href="/admin-next/event?id=RXZlbnQ6ZXZlbnQz"
    >
      GrenobleWeb2015
    </a>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL eQUJjL"
    >
      <a
        className="sc-bcXGCL cwEAzx cap-link"
        href="https://capco.dev/consultation/croissance-innovation-disruption/presentation/presentation-1"
      >
        Croissance, innovation, disruption
      </a>
      <div
        className="sc-bcXGCL hxRyWs"
      />
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <p
      className="sc-bcXGCL hQvDkj cap-text"
    >
      10/06/2032
       
      -
       
      16/03/2035
    </p>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL cwEAzx cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    03/01/2015
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL hxFFPc"
    >
      <button
        aria-describedby=":r3:"
        aria-label="global.download"
        className="sc-bcXGCL hluKno cap-buttonQuickAction"
        href="https://capco.dev/export-event-participants/event3?_locale=fr-FR"
        onBlur={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocusCapture={[Function]}
        onKeyDownCapture={[Function]}
        onKeyPressCapture={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseMove={[Function]}
      >
        <svg
          aria-hidden="true"
          className="sc-bcXGCL sc-oZHua WsfA-d hQQZty cap-icon cap-buttonQuickAction-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.546 16.938c-.67 0-1.212.543-1.212 1.212v1.855a1.57 1.57 0 0 1-1.571 1.57H3.995c-.867 0-1.57-.703-1.571-1.57V18.15a1.212 1.212 0 1 0-2.424 0v1.855a4 4 0 0 0 3.995 4h15.768a4 4 0 0 0 4-4V18.15a1.21 1.21 0 0 0-1.217-1.212"
          />
          <path
            d="M11.879 0A1.94 1.94 0 0 0 9.94 1.939v9.066a.25.25 0 0 1-.25.25H7.031a.97.97 0 0 0-.732 1.606l4.848 5.576a.97.97 0 0 0 1.464 0l4.848-5.576a.97.97 0 0 0-.732-1.606h-2.659a.25.25 0 0 1-.25-.25V1.939A1.94 1.94 0 0 0 11.879 0"
          />
        </svg>
      </button>
      <span
        hidden={true}
        id=":r3:"
        style={
          {
            "position": "fixed",
          }
        }
      />
    </div>
  </td>,
]
`;
